Add travis test that verifies `go generate` has been run
- Run `go generate` in CI (travis) and abort if a diff is produced

- Move kubecfg_test.jsonnet into a different subdir than
  kubecfg.jsonnet.
  This ensures the test finds (embedded) kubecfg.jsonnet via the
  regular jsonnet search path and doesn't "cheat" and find the file
  via the local directory.

Fixes #216  (by making sure it never happens again)

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ addons:
       - ca-certificates
 
 install:
+  - go get github.com/jteeuwen/go-bindata/go-bindata
   - |
     if [ "$DO_INTEGRATION_TEST" = 1 ]; then
       if ! which minikube; then
@@ -57,6 +58,12 @@ install:
     fi
 
 script:
+  - make generate
+  - |
+    if ! git diff --exit-code --name-only; then
+      echo 'Run "make generate" and add generated changes to this PR'
+      exit 1
+    fi
   - make all test vet
   - >
     ldd ./kubecfg || otool -L ./kubecfg || :
