With all tests passed \o/, now bump minikube and Kube versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
 
 matrix:
   include:
-    - env: DO_INTEGRATION_TEST=1 INT_KVERS=v1.9.4
+    - env: DO_INTEGRATION_TEST=1 INT_KVERS=v1.16.8
   fast_finish: true
 
 services:
@@ -42,7 +42,7 @@ install:
     if [ "$DO_INTEGRATION_TEST" = 1 ]; then
       if ! which minikube; then
         wget -O minikube \
-           https://storage.googleapis.com/minikube/releases/v0.25.2/minikube-$(go env GOOS)-$(go env GOARCH)
+           https://storage.googleapis.com/minikube/releases/v1.9.2/minikube-$(go env GOOS)-$(go env GOARCH)
         install -m 755 minikube $GOPATH/bin/minikube
       fi
       if ! which kubectl; then
@@ -52,7 +52,7 @@ install:
       mkdir -p $HOME/.kube
       touch $HOME/.kube/config
       sudo -E $GOPATH/bin/minikube start --vm-driver=none \
-        --extra-config apiserver.Authorization.Mode=RBAC \
+        --extra-config apiserver.authorization-mode=RBAC \
         --kubernetes-version $INT_KVERS
       export GO111MODULE=on
       GINKGO_VERSION=$(go list -f '{{.Version}}' -m github.com/onsi/ginkgo)
